# ASV2019_LA_DRSAS_NET

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: defaults.yaml
drsas_net/: __init__.py  config.py
drsas_net/engine/: evaluator.py  trainer.py
drsas_net/models/: model.py
drsas_net/utils/: logger.py  metrics.py  seed.py
scripts/: eval.py  predict.py  train.py
tests/: test_smoke.py
