[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drsas_net"
version = "0.1.0"
description = "DRSAS-Net modular package scaffold"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
dependencies = []

[project.scripts]
drsas-train = "drsas_net.engine.trainer:main"
drsas-eval = "drsas_net.engine.evaluator:main"

[tool.setuptools.packages.find]
where = ["."]
